 - [DEV-262] added group filtering  for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.3

 - [ZBX-730] fixed possible Windows agent crash when processing eventlog[] (Sasha)
 - [ZBX-555] added entity counts on interfaces (Vedmak)
 - [ZBX-724] improved queries in "Graphs" page (Artem)
 - [ZBX-725] added new default user group "Disabled" (Vedmak)
 - [ZBX-723] fixed Wrong URL when add rights to user group (Vedmak)
 - [ZBX-720] edited configure.in file to make some error messages more sensible (Dmitry)
 - [ZBX-665] corrected some typos in misc/conf/zabbix_server.conf (Dmitry)
 - corrected some typos in test/env/standalone/conf/template_server.conf (Dmitry)
 - [ZBX-615] fixed processing of four-character-long item keys (Dmitry)
 - [ZBX-697] trigger description in "Last 20 issues" is link to the URL defined in trigger parameters + minor GUI typos fix (Vedmak)
 - [ZBX-473] fixed SNMP-related compilation problem with undefined 'localname' under some platforms (Sasha)
 - [ZBX-718] fixed web graphs start time not changing (Vedmak)
 - [ZBX-699] fixed recursion detection in Include directive for config files (Sasha)
 - [ZBX-301] fixed minor GUI text errors  (Vedmak)
 - [ZBX-716] fixed wrong caption for graph item editing form (Vedmak)
 - [ZBX-717] all templates linked to group Templates in default config (Sasha)
 - [ZBX-715] fixed "Invalid URL" error when choose History from history submenu (Vedmak)
 - [ZBX-713] fixed "values per second" having too many decimal places (Vedmak)
 - [ZBX-710] fixed duplicating entries in hosts groups after import (Artem)
 - [ZBX-709] improved item graph exporting (Artem)
 - [ZBX-712] fixed simple/advanced item filter switch (Vedmak)